@@ -23,6 +23,26 @@
         <property name="last-image" type="string" value="/usr/share/images/desktop-base/default"/>
         <property name="last-single-image" type="string" value="/usr/share/images/desktop-base/default"/>
       </property>
+      <property name="monitor1" type="empty">
+        <property name="brightness" type="int" value="0"/>
+        <property name="color1" type="array">
+          <value type="uint" value="7936"/>
+          <value type="uint" value="16128"/>
+          <value type="uint" value="28416"/>
+          <value type="uint" value="65535"/>
+        </property>
+        <property name="color2" type="array">
+          <value type="uint" value="26880"/>
+          <value type="uint" value="34048"/>
+          <value type="uint" value="46848"/>
+          <value type="uint" value="65535"/>
+        </property>
+        <property name="color-style" type="int" value="1"/>
+        <property name="image-path" type="string" value="/usr/share/images/desktop-base/default"/>
+        <property name="image-show" type="bool" value="true"/>
+        <property name="last-image" type="string" value="/usr/share/images/desktop-base/default"/>
+        <property name="last-single-image" type="string" value="/usr/share/images/desktop-base/default"/>
+      </property>
     </property>
   </property>
 </channel>
